Fix div alignment

--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,14 @@ textarea {
     font-size: 100%;
 }
 
+* {
+    font-family: 'Open Sans', sans-serif;
+}
+
 .page {
     min-height: 100vh;
     display: flex;
-    border: 2px solid black
+    border: 2px solid magenta;
 }
 
 .background {
@@ -53,47 +57,50 @@ textarea {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 2px solid black;
+    border: 2px solid cyan;
 }
 
 .headline {
-    flex: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    padding: 3rem;
     font-family: 'Open Sans', sans-serif;
-    font-size: 1rem;
-    gap: 1rem;
+    font-size: 1.5rem;
+    border: 5px solid orange;
+    padding: 3rem 2rem;
 }
 
-.signup-form {
-    flex: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    border: 2px solid green;
+.form-main {
+    border: 5px solid magenta;
+}
+
+.bottom {
+    border: 5px solid red;
+}
+
+.form-label {
+    border: 2px solid saddlebrown;
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
 }
 
 .formfields {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.form-item {
-    display: flex;
-    flex-direction: column; 
-}
-
-.login {
-    flex: auto;
+    border: 2px solid limegreen;
+    padding: 1rem 2rem;
 }
 
 .row1, .row2, .row3 {
+    border: 4px solid yellow;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    gap: 5rem;
+}
+
+.form-item {
+    border: 1px solid red;
+    display: flex;
+    gap: 0.5rem;
+    flex-direction: column;
+}
+
+input {
+    padding: 0,5rem;
 }
 
 .img-credit, .background a {
